crates/math-core/tests/snapshots/error_test__incorrect_bracket.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\operatorname[lim}"
---
Error: Unmatched closing token: "}".
   ╭─[ <input>:1:18 ]
   │
 1 │ \operatorname[lim}
   │                  ┬  
   │                  ╰── unmatched "}"
───╯
